--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ configurations {
 }
 
 repositories {
-//    mavenCentral()
+//  mavenCentral()
     maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     mavenLocal()
     mavenCentral()
@@ -31,10 +31,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.mapstruct:mapstruct-jdk8:1.2.0.Final'
+    implementation 'com.auth0:java-jwt:3.8.3'
+    implementation 'com.alibaba:fastjson:1.2.46'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
-//注意mapstruct的Processor不要忘记了加
+    //注意mapstruct的Processor不要忘记了加
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.2.0.Final'
