上传一个去检查一下utf8的设置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.connection.characterEncoding=utf8
 spring.jpa.properties.hibernate.connection.CharSet=utf8
 spring.jpa.properties.hibernate.connection.useUnicode=true
+
+# Charset of HTTP requests and responses. Added to the "Content-Type" header if not set explicitly.
+spring.http.encoding.charset=UTF-8
+# Enable http encoding support.
+spring.http.encoding.enabled=true 
+#默认配置一般为utf8,但是有两个返回响应的配置不一定是强制为utf8
+spring.http.encoding.force=true
